# PHOSDash

./: .gitignore  Dados_PHOSDash.xlsx  Modelo_dados_PHOSDash.xlsx  PROPOSTA_ARQUITETURA_v2.md  README.md  app.py  pyproject.toml  requirements.txt  ~$Dados_PHOSDash.xlsx
.github/workflows/: ci.yml
.streamlit/: config.toml
assets/: theme.css
components/: charts.py  crossfilter.py  ui.py
core/: __init__.py  config.py  data_loader.py  sidebar.py
data/: vagas_bpo.docx  vagas_bpo.json  vagas_bpo.md  vagas_bpo_totais.md
docs/: google_sheets_feedback.md
pages/: Feedback.py
services/: alert_engine.py  analytics_service.py  insights_engine.py  kpi_service.py  page_engine.py  pdf_export.py
state/: __init__.py  filters.py
tests/: test_alert_engine.py  test_analytics.py  test_filters.py  test_kpi_service.py  test_page_engine.py
utils/: formatters.py
views/: Custos.py  Feedback.py  Financeiro.py  Overview.py  Receita.py  __init__.py
